plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:31.0-jre'
    implementation "jakarta.annotation:jakarta.annotation-api:1.3.5"
    implementation 'com.formdev:flatlaf:1.6'
    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.13.+")
    testImplementation "org.mockito:mockito-core:3.+"
    testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'gomule.GoMule'
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

task copyJarToDistribution(type: Copy) {
    from jar
    into "build/tmp/distribution/GoMule"
    rename { "GoMule.jar" }
}

task copyResourcesToDistribution(type: Copy) {
    from ".", {
        include 'd2111/**'
        include 'dupelists/**'
        include 'resources/**'
        include 'COPYING.txt'
        include 'LICENSE.txt'
        include 'standard.css'
        include 'standard.dat'

    }
    into "build/tmp/distribution/GoMule/"
}

task createDistribution {
    delete "build/tmp/distribution"
    mkdir "build/tmp/distribution/GoMule"
}

tasks.named('jar', Jar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// task distribution(type: Zip) {
//     from 'build/tmp/distribution/'
//     include 'GoMule/**'
//     archiveName 'GoMuleR4.4.21-BETA16x13_Resurrected_2.7.zip'
// }

copyJarToDistribution.dependsOn jar
//copyJarToDistribution.dependsOn test
// distribution.dependsOn createDistribution
createDistribution.finalizedBy copyJarToDistribution
createDistribution.finalizedBy copyResourcesToDistribution